src/tests/snapshots/nyx__tests__window_opening__check_target_size@dwU-dhU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-column-width {  }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 0 × 0, bounds: 1272 × 712, states: []
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
